kanc/src/tests/sample_code/should_fail/single_file/parse/empty_parens/empty_call_params.k
type U {
    .u: U,
}

let foo = fun foo(x: U): U { U.u };

let bar = foo();
